--- a/trunk/configs/boards/MZ-R13/kernel-3.4.x.config
+++ b/trunk/configs/boards/MZ-R13/kernel-3.4.x.config
@@ -11,9 +11,9 @@ CONFIG_MIPS=y
 # CONFIG_RALINK_RT3352 is not set
 # CONFIG_RALINK_RT5350 is not set
 # CONFIG_RALINK_RT3883 is not set
-CONFIG_RALINK_MT7620=y
+# CONFIG_RALINK_MT7620 is not set
 # CONFIG_RALINK_MT7621 is not set
-# CONFIG_RALINK_MT7628 is not set
+CONFIG_RALINK_MT7628=y
 # CONFIG_MIPS_ALCHEMY is not set
 # CONFIG_AR7 is not set
 # CONFIG_ATH79 is not set
@@ -58,8 +58,7 @@ CONFIG_RALINK_MT7620=y
 # CONFIG_CAVIUM_OCTEON_REFERENCE_BOARD is not set
 # CONFIG_NLM_XLR_BOARD is not set
 # CONFIG_NLM_XLP_BOARD is not set
-CONFIG_MT7620_ASIC=y
-# CONFIG_RALINK_MT7620_PLL600 is not set
+CONFIG_MT7628_ASIC=y
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
 # CONFIG_RT2880_DRAM_16M is not set
 # CONFIG_RT2880_DRAM_32M is not set
@@ -219,7 +218,7 @@ CONFIG_ANON_INODES=y
 CONFIG_EXPERT=y
 # CONFIG_SYSCTL_SYSCALL is not set
 # CONFIG_KALLSYMS is not set
-CONFIG_HOTPLUG=y
+# CONFIG_HOTPLUG is not set
 CONFIG_PRINTK=y
 CONFIG_BUG=y
 # CONFIG_ELF_CORE is not set
@@ -245,7 +244,6 @@ CONFIG_TINY=y
 # CONFIG_ETHTOOL is not set
 CONFIG_MAX_SWAPFILES_SHIFT=0
 CONFIG_MAX_USER_RT_PRIO=100
-CONFIG_PCI_QUIRKS=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_SLAB=y
 # CONFIG_SLUB is not set
@@ -328,22 +326,9 @@ CONFIG_INLINE_WRITE_UNLOCK_IRQ=y
 # Bus options (PCI, PCMCIA, EISA, ISA, TC)
 #
 CONFIG_HW_HAS_PCI=y
-CONFIG_PCI=y
-CONFIG_PCI_DOMAINS=y
+# CONFIG_PCI is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
-# CONFIG_PCI_REALLOC_ENABLE_AUTO is not set
-# CONFIG_PCI_STUB is not set
-CONFIG_PCI_DISABLE_COMMON_QUIRKS=y
-# CONFIG_PCI_IOV is not set
-# CONFIG_PCI_PRI is not set
-# CONFIG_PCI_PASID is not set
-CONFIG_PCIEPORTBUS=y
-# CONFIG_PCIEAER is not set
-# CONFIG_PCIEASPM is not set
 CONFIG_MMU=y
-# CONFIG_PCCARD is not set
-# CONFIG_HOTPLUG_PCI is not set
-# CONFIG_RAPIDIO is not set
 
 #
 # Executable file formats
@@ -437,7 +422,7 @@ CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NAT_CONE=y
 # CONFIG_NAT_LINUX is not set
 CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT=y
-CONFIG_NETFILTER_FP_SMB=y
+# CONFIG_NETFILTER_FP_SMB is not set
 CONFIG_NETFILTER_NETLINK=m
 # CONFIG_NETFILTER_NETLINK_ACCT is not set
 # CONFIG_NETFILTER_NETLINK_QUEUE is not set
@@ -705,13 +690,9 @@ CONFIG_ASUS_NVRAM_API=y
 #
 # Generic Driver Options
 #
-CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
-# CONFIG_DEVTMPFS is not set
 CONFIG_STANDALONE=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
-CONFIG_FW_LOADER=y
-CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_EXTRA_FIRMWARE=""
+# CONFIG_FW_LOADER is not set
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
 # CONFIG_DMA_SHARED_BUFFER is not set
@@ -758,13 +739,11 @@ CONFIG_MTD_CFI_I2=y
 # Mapping drivers for chip access
 #
 # CONFIG_MTD_COMPLEX_MAPPINGS is not set
-# CONFIG_MTD_INTEL_VR_NOR is not set
 # CONFIG_MTD_PLATRAM is not set
 
 #
 # Self-contained MTD device drivers
 #
-# CONFIG_MTD_PMC551 is not set
 # CONFIG_MTD_SLRAM is not set
 # CONFIG_MTD_PHRAM is not set
 # CONFIG_MTD_MTDRAM is not set
@@ -788,17 +767,14 @@ CONFIG_MTD_CFI_I2=y
 #
 CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
-# CONFIG_MTD_NAND_RALINK is not set
 CONFIG_MTD_SPI_FAST_CLOCK=y
-# CONFIG_MTD_SPI_READ_NORM is not set
+CONFIG_MTD_SPI_READ_NORM=y
 # CONFIG_MTD_SPI_READ_FAST is not set
-CONFIG_MTD_SPI_READ_DOR=y
-# CONFIG_MTD_SPI_READ_DIOR is not set
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
-# CONFIG_RT2880_FLASH_16M is not set
+CONFIG_RT2880_FLASH_16M=y
 # CONFIG_RT2880_FLASH_32M is not set
-CONFIG_RT2880_FLASH_AUTO=y
+# CONFIG_RT2880_FLASH_AUTO is not set
 CONFIG_RT2880_MTD_PHYSMAP_START=0x1C000000
 CONFIG_RT2880_MTD_PHYSMAP_LEN=0x1000000
 CONFIG_RT2880_MTD_PHYSMAP_BUSWIDTH=2
@@ -808,11 +784,6 @@ CONFIG_ROOTFS_IN_FLASH_NO_PADDING=y
 CONFIG_MTD_STORE_PART_SIZ=0x80000
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
-# CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-# CONFIG_BLK_CPQ_DA is not set
-# CONFIG_BLK_CPQ_CISS_DA is not set
-# CONFIG_BLK_DEV_DAC960 is not set
-# CONFIG_BLK_DEV_UMEM is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
@@ -822,8 +793,6 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # DRBD disabled because PROC_FS, INET or CONNECTOR not selected
 #
 # CONFIG_BLK_DEV_NBD is not set
-# CONFIG_BLK_DEV_NVME is not set
-# CONFIG_BLK_DEV_SX8 is not set
 # CONFIG_BLK_DEV_RAM is not set
 # CONFIG_CDROM_PKTCDVD is not set
 # CONFIG_ATA_OVER_ETH is not set
@@ -832,20 +801,13 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 #
 # Misc devices
 #
-# CONFIG_PHANTOM is not set
-# CONFIG_INTEL_MID_PTI is not set
-# CONFIG_SGI_IOC4 is not set
-# CONFIG_TIFM_CORE is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
-# CONFIG_HP_ILO is not set
-# CONFIG_PCH_PHUB is not set
 # CONFIG_C2PORT is not set
 
 #
 # EEPROM support
 #
 # CONFIG_EEPROM_93CX6 is not set
-# CONFIG_CB710_CORE is not set
 
 #
 # Texas Instruments shared transport line discipline
@@ -865,20 +827,12 @@ CONFIG_SCSI_MOD=y
 # CONFIG_SCSI_NETLINK is not set
 # CONFIG_ATA is not set
 # CONFIG_MD is not set
-# CONFIG_FUSION is not set
-
-#
-# IEEE 1394 (FireWire) support
-#
-# CONFIG_FIREWIRE is not set
-# CONFIG_FIREWIRE_NOSY is not set
-# CONFIG_I2O is not set
 CONFIG_NETDEVICES=y
 CONFIG_NET_CORE=y
 # CONFIG_BONDING is not set
 # CONFIG_DUMMY is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_MII=y
+# CONFIG_MII is not set
 # CONFIG_NET_TEAM is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_NETCONSOLE is not set
@@ -887,14 +841,11 @@ CONFIG_MII=y
 # CONFIG_IMQ is not set
 CONFIG_TUN=y
 # CONFIG_VETH is not set
-# CONFIG_ARCNET is not set
 
 #
 # CAIF transport drivers
 #
 # CONFIG_ETHERNET is not set
-# CONFIG_FDDI is not set
-# CONFIG_HIPPI is not set
 # CONFIG_PHYLIB is not set
 CONFIG_PPP=y
 CONFIG_PPP_ONLY_IP=y
@@ -906,19 +857,16 @@ CONFIG_PPP_MPPE=y
 CONFIG_PPPOE=y
 CONFIG_PPTP=y
 CONFIG_PPPOL2TP=y
-CONFIG_PPP_ASYNC=y
-CONFIG_PPP_SYNC_TTY=y
+# CONFIG_PPP_ASYNC is not set
+# CONFIG_PPP_SYNC_TTY is not set
 # CONFIG_SLIP is not set
 CONFIG_WLAN=y
-# CONFIG_ATMEL is not set
-# CONFIG_PRISM54 is not set
 # CONFIG_HOSTAP is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
 #
 # CONFIG_WAN is not set
-# CONFIG_VMXNET3 is not set
 # CONFIG_ISDN is not set
 
 #
@@ -940,16 +888,12 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_SERIAL_NONSTANDARD is not set
-# CONFIG_NOZOMI is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
 # CONFIG_RALINK_GPIOMODE_EPHY is not set
-# CONFIG_RALINK_GPIOMODE_MDIO is not set
 # CONFIG_RALINK_GPIOMODE_PA_G is not set
-CONFIG_RALINK_GPIOMODE_UARTF=y
 # CONFIG_RALINK_GPIOMODE_SPI is not set
-CONFIG_RALINK_GPIOMODE_SPI_REFCLK=y
 CONFIG_RALINK_GPIOMODE_I2C=y
 CONFIG_RALINK_GPIO_IRQ=y
 CONFIG_RALINK_GPIO_LED=y
@@ -963,32 +907,25 @@ CONFIG_RALINK_GPIO_LED=y
 #
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
-# CONFIG_SERIAL_8250_PCI is not set
 CONFIG_SERIAL_8250_NR_UARTS=1
 CONFIG_SERIAL_8250_RUNTIME_UARTS=1
 # CONFIG_SERIAL_8250_EXTENDED is not set
-CONFIG_SERIAL_8250_RT288X=y
 
 #
 # Non-8250 serial port support
 #
-# CONFIG_SERIAL_MFD_HSU is not set
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
-# CONFIG_SERIAL_JSM is not set
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
 # CONFIG_SERIAL_ALTERA_UART is not set
-# CONFIG_SERIAL_PCH_UART is not set
 # CONFIG_SERIAL_XILINX_PS_UART is not set
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_IPMI_HANDLER is not set
 # CONFIG_HW_RANDOM is not set
 # CONFIG_R3964 is not set
-# CONFIG_APPLICOM is not set
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
-CONFIG_DEVPORT=y
 # CONFIG_RAMOOPS is not set
 # CONFIG_I2C is not set
 # CONFIG_SPI is not set
@@ -1026,35 +963,27 @@ CONFIG_DEVPORT=y
 # CONFIG_HTC_PASIC3 is not set
 # CONFIG_MFD_TMIO is not set
 # CONFIG_ABX500_CORE is not set
-# CONFIG_LPC_SCH is not set
-# CONFIG_MFD_RDC321X is not set
-# CONFIG_MFD_JANZ_CMODIO is not set
-# CONFIG_MFD_VX855 is not set
 # CONFIG_REGULATOR is not set
 # CONFIG_MEDIA_SUPPORT is not set
 
 #
 # Graphics support
 #
-# CONFIG_VGA_ARB is not set
 # CONFIG_DRM is not set
-# CONFIG_STUB_POULSBO is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 # CONFIG_FB is not set
 # CONFIG_EXYNOS_VIDEO is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 # CONFIG_SOUND is not set
-CONFIG_USB_ARCH_HAS_OHCI=y
-CONFIG_USB_ARCH_HAS_EHCI=y
-CONFIG_USB_ARCH_HAS_XHCI=y
+# CONFIG_USB_ARCH_HAS_OHCI is not set
+# CONFIG_USB_ARCH_HAS_EHCI is not set
+# CONFIG_USB_ARCH_HAS_XHCI is not set
 # CONFIG_USB_SUPPORT is not set
-# CONFIG_UWB is not set
 # CONFIG_MMC is not set
 # CONFIG_MEMSTICK is not set
 # CONFIG_NEW_LEDS is not set
 # CONFIG_ACCESSIBILITY is not set
-# CONFIG_INFINIBAND is not set
 CONFIG_RTC_LIB=y
 # CONFIG_RTC_CLASS is not set
 # CONFIG_DMADEVICES is not set
@@ -1064,7 +993,6 @@ CONFIG_RTC_LIB=y
 #
 # Virtio drivers
 #
-# CONFIG_VIRTIO_PCI is not set
 # CONFIG_VIRTIO_BALLOON is not set
 # CONFIG_VIRTIO_MMIO is not set
 
@@ -1102,9 +1030,9 @@ CONFIG_RTC_LIB=y
 # CONFIG_NILFS2_FS is not set
 # CONFIG_FS_POSIX_ACL is not set
 CONFIG_FILE_LOCKING=y
-CONFIG_FSNOTIFY=y
+# CONFIG_FSNOTIFY is not set
 # CONFIG_DNOTIFY is not set
-CONFIG_INOTIFY_USER=y
+# CONFIG_INOTIFY_USER is not set
 # CONFIG_FANOTIFY is not set
 # CONFIG_QUOTA is not set
 # CONFIG_QUOTACTL is not set
@@ -1190,7 +1118,7 @@ CONFIG_NLS_CODEPAGE_437=y
 # CONFIG_NLS_CODEPAGE_863 is not set
 # CONFIG_NLS_CODEPAGE_864 is not set
 # CONFIG_NLS_CODEPAGE_865 is not set
-CONFIG_NLS_CODEPAGE_866=y
+# CONFIG_NLS_CODEPAGE_866 is not set
 # CONFIG_NLS_CODEPAGE_869 is not set
 # CONFIG_NLS_CODEPAGE_936 is not set
 # CONFIG_NLS_CODEPAGE_950 is not set
@@ -1201,7 +1129,7 @@ CONFIG_NLS_CODEPAGE_866=y
 # CONFIG_NLS_CODEPAGE_1250 is not set
 # CONFIG_NLS_CODEPAGE_1251 is not set
 # CONFIG_NLS_ASCII is not set
-CONFIG_NLS_ISO8859_1=y
+# CONFIG_NLS_ISO8859_1 is not set
 # CONFIG_NLS_ISO8859_2 is not set
 # CONFIG_NLS_ISO8859_3 is not set
 # CONFIG_NLS_ISO8859_4 is not set
@@ -1272,7 +1200,7 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
-# CONFIG_CRYPTO_RNG is not set
+CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
@@ -1295,7 +1223,7 @@ CONFIG_CRYPTO_WORKQUEUE=y
 #
 # Block modes
 #
-# CONFIG_CRYPTO_CBC is not set
+CONFIG_CRYPTO_CBC=y
 # CONFIG_CRYPTO_CTR is not set
 # CONFIG_CRYPTO_CTS is not set
 CONFIG_CRYPTO_ECB=y
@@ -1331,7 +1259,7 @@ CONFIG_CRYPTO_SHA1=y
 #
 # Ciphers
 #
-# CONFIG_CRYPTO_AES is not set
+CONFIG_CRYPTO_AES=y
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
@@ -1360,18 +1288,18 @@ CONFIG_CRYPTO_DES=m
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
-# CONFIG_CRYPTO_HW is not set
+CONFIG_CRYPTO_HW=y
+CONFIG_CRYPTO_DEV_LINUX=m
+CONFIG_CRYPTO_DEV_MTK_AES=m
 # CONFIG_BINARY_PRINTF is not set
 
 #
 # Library routines
 #
 CONFIG_BITREVERSE=y
-CONFIG_NO_GENERIC_PCI_IOPORT_MAP=y
-CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_CRC_CCITT=y
-CONFIG_CRC16=y
+# CONFIG_CRC16 is not set
 # CONFIG_CRC_T10DIF is not set
 # CONFIG_CRC_ITU_T is not set
 CONFIG_CRC32=y
@@ -1415,32 +1343,20 @@ CONFIG_GENERIC_ATOMIC64=y
 # CONFIG_RALINK_RDM is not set
 
 #
-# External Ethernet Giga-Switch
-#
-# CONFIG_RTL8367 is not set
-
-#
 # Ralink Wired Ethernet Driver
 #
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
 # CONFIG_RAETH_NAPI_GRO is not set
 CONFIG_RAETH_BQL=y
-# CONFIG_RAETH_JUMBOFRAME is not set
-CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
-CONFIG_RAETH_SG_DMA_TX=y
-# CONFIG_RAETH_TSO is not set
 CONFIG_GE1_MAC_ESW=y
-# CONFIG_RAETH_HAS_PORT5 is not set
-# CONFIG_RAETH_HAS_PORT4 is not set
 CONFIG_RAETH_ESW=y
-# CONFIG_MT7530_GSW is not set
+# CONFIG_RAETH_ESW_ONE_PORT is not set
 # CONFIG_RAETH_SPECIAL_TAG is not set
 CONFIG_RAETH_ESW_CONTROL=y
 # CONFIG_RAETH_ESW_IGMP_SNOOP_OFF is not set
 CONFIG_RAETH_ESW_IGMP_SNOOP_SW=y
-# CONFIG_RAETH_ESW_IGMP_SNOOP_HW is not set
 CONFIG_RAETH_ESW_PORT_WAN=4
 CONFIG_RAETH_ESW_PORT_LAN1=3
 CONFIG_RAETH_ESW_PORT_LAN2=2
@@ -1459,18 +1375,17 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # 1st Wireless Interface
 #
 # CONFIG_RT_FIRST_IF_NONE is not set
-# CONFIG_RT_FIRST_IF_RT2860 is not set
-CONFIG_RT_FIRST_IF_MT7620=y
+CONFIG_RT_FIRST_IF_MT7628=y
 CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
 CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
 CONFIG_RT_FIRST_IF_RF_OFFSET=0x40000
-CONFIG_RT_FIRST_CARD=7620
+CONFIG_RT_FIRST_CARD=7628
 CONFIG_RT_FIRST_CARD_EEPROM="flash"
 
 #
 # 2nd Wireless Interface
 #
-# CONFIG_RT_SECOND_IF_NONE is not set
+CONFIG_RT_SECOND_IF_NONE=y
 # CONFIG_RT_SECOND_IF_RT3352_INIC is not set
 # CONFIG_RT_SECOND_IF_RT3090 is not set
 # CONFIG_RT_SECOND_IF_RT5392 is not set
@@ -1478,57 +1393,41 @@ CONFIG_RT_FIRST_CARD_EEPROM="flash"
 # CONFIG_RT_SECOND_IF_RT3593 is not set
 # CONFIG_RT_SECOND_IF_MT7610E is not set
 # CONFIG_RT_SECOND_IF_MT7602E is not set
-CONFIG_RT_SECOND_IF_MT7612E=y
+# CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7603E is not set
 # CONFIG_RT_SECOND_IF_MT7615E is not set
-# CONFIG_RT_SECOND_IF_RANGE_2GHZ is not set
-CONFIG_RT_SECOND_IF_RANGE_5GHZ=y
-CONFIG_RT_SECOND_IF_EEPROM_FLASH=y
-# CONFIG_RT_SECOND_IF_EEPROM_EFUSE is not set
-# CONFIG_RT_SECOND_IF_EEPROM_PROM is not set
-CONFIG_RT_SECOND_IF_RF_OFFSET=0x48000
-CONFIG_RT_SECOND_CARD=7612
-CONFIG_RT_SECOND_CARD_EEPROM="flash"
+CONFIG_RT_SECOND_CARD=0
 
 #
 # Wireless drivers settings
 #
 
 #
-# AP MODE MediaTek MT7620/MT7602E/MT7612E RBUS/PCIe Wireless driver
+# AP MODE MediaTek MT7628/MT7688 RBUS Wireless driver
 #
-CONFIG_MT76X2_AP=m
-CONFIG_MT76X2_AP_LED=y
-CONFIG_MT76X2_AP_LLTD=y
-CONFIG_MT76X2_AP_WDS=y
-CONFIG_MT76X2_AP_MBSS=y
-CONFIG_MT76X2_AP_MBSS_NEW_MBSSID_MODE=y
-CONFIG_MT76X2_AP_APCLI=y
-# CONFIG_MT76X2_AP_APCLI_CERT is not set
-# CONFIG_MT76X2_AP_APCLI_AUTO_BW is not set
-# CONFIG_MT76X2_AP_MAC_REPEATER is not set
-# CONFIG_MT76X2_AP_MWDS is not set
-# CONFIG_MT76X2_AP_SMART_MESH is not set
-# CONFIG_MT76X2_AP_AIRPLAY is not set
-# CONFIG_MT76X2_AP_DFS is not set
-# CONFIG_MT76X2_AP_CARRIER is not set
-# CONFIG_MT76X2_AP_GREENAP is not set
-# CONFIG_MT76X2_AP_IDS is not set
-# CONFIG_MT76X2_AP_DLS is not set
-CONFIG_MT76X2_AP_80211AC_VHT=y
-# CONFIG_MT76X2_AP_TXBF_SUPPORT is not set
-# CONFIG_MT76X2_AP_INTERNAL_PA_INTERNAL_LNA is not set
-# CONFIG_MT76X2_AP_INTERNAL_PA_EXTERNAL_LNA is not set
-CONFIG_MT76X2_AP_EXTERNAL_PA_EXTERNAL_LNA=y
-# CONFIG_MT76X2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
-# CONFIG_MT76X2_AP_ADJ_PWR_CONSUMPTION is not set
+CONFIG_MT7628_AP=m
+# CONFIG_MT7628_AP_LED is not set
+# CONFIG_MT7628_AP_LED_SOFT is not set
+CONFIG_MT7628_AP_LLTD=y
+CONFIG_MT7628_AP_WDS=y
+CONFIG_MT7628_AP_MBSS=y
+CONFIG_MT7628_AP_APCLI=y
+# CONFIG_MT7628_AP_APCLI_AUTO_BW is not set
+# CONFIG_MT7628_AP_APCLI_CERT is not set
+# CONFIG_MT7628_AP_MAC_REPEATER is not set
+# CONFIG_MT7628_AP_AIRPLAY is not set
+# CONFIG_MT7628_AP_DFS is not set
+# CONFIG_MT7628_AP_CARRIER is not set
+CONFIG_MT7628_AP_SMART_CARRIER_SENSE=y
+# CONFIG_MT7628_AP_GREENAP is not set
+# CONFIG_MT7628_AP_IDS is not set
+# CONFIG_MT7628_AP_DLS is not set
 
 #
 # Wireless drivers common configs
 #
 # CONFIG_RT_SINGLE_SKU is not set
 CONFIG_RT_MAX_CLIENTS=40
-# CONFIG_RT_BAND_STEERING is not set
 # CONFIG_RT_DOT11R_FT is not set
 # CONFIG_RT_DOT11K_RRM is not set
 # CONFIG_RT_80211N_DRAFT3 is not set
@@ -1547,39 +1446,7 @@ CONFIG_RT_READ_MAC_FROM_MTD=y
 #
 # Ralink NAT Acceleration Mode
 #
-# CONFIG_RA_NAT_NONE is not set
-CONFIG_RA_NAT_HW=y
-CONFIG_RA_HW_NAT=m
-CONFIG_HNAT_V2=y
-CONFIG_RA_HW_NAT_LAN_VLANID=1
-CONFIG_RA_HW_NAT_WAN_VLANID=2
-CONFIG_RA_HW_NAT_BINDING_THRESHOLD=20
-CONFIG_RA_HW_NAT_QURT_LMT=16383
-CONFIG_RA_HW_NAT_HALF_LMT=16383
-CONFIG_RA_HW_NAT_FULL_LMT=16383
-# CONFIG_RA_HW_NAT_TBL_1K is not set
-# CONFIG_RA_HW_NAT_TBL_2K is not set
-# CONFIG_RA_HW_NAT_TBL_4K is not set
-# CONFIG_RA_HW_NAT_TBL_8K is not set
-CONFIG_RA_HW_NAT_TBL_16K=y
-# CONFIG_RA_HW_NAT_HASH0 is not set
-CONFIG_RA_HW_NAT_HASH1=y
-# CONFIG_RA_HW_NAT_HASH2 is not set
-# CONFIG_RA_HW_NAT_HASH3 is not set
-CONFIG_RA_HW_NAT_TCP_KA=1
-CONFIG_RA_HW_NAT_UDP_KA=1
-CONFIG_RA_HW_NAT_NTU_KA=1
-CONFIG_RA_HW_NAT_UNB_DLTA=3
-CONFIG_RA_HW_NAT_UNB_MNP=1000
-CONFIG_RA_HW_NAT_UDP_DLTA=5
-CONFIG_RA_HW_NAT_TCP_DLTA=5
-CONFIG_RA_HW_NAT_FIN_DLTA=5
-CONFIG_RA_HW_NAT_NTU_DLTA=5
-CONFIG_RA_HW_NAT_IPV6=y
-# CONFIG_RA_HW_NAT_MCAST is not set
-# CONFIG_RA_HW_NAT_PCI is not set
-CONFIG_RA_HW_NAT_WIFI=y
-# CONFIG_RA_HW_NAT_DEBUG is not set
+CONFIG_RA_NAT_NONE=y
 
 #
 # Ralink HW Crypto
