K2P: bump to beta kernel(include napt66)

--- a/trunk/user/napt66/Makefile
+++ b/trunk/user/napt66/Makefile
@@ -2,7 +2,11 @@ SRC_NAME = napt66-v1.1
 THISDIR = $(shell pwd)
 
 all:
+ifeq ($(CONFIG_WITHOUT_KERNEL),y)
+	@echo "napt66 build done"
+else
 	$(MAKE) -C $(SRC_NAME)
+endif
 
 romfs:
 	chmod -R +x scripts/
