--- a/trunk/configs/templates/MI-3.config
+++ b/trunk/configs/templates/MI-3.config
@@ -254,6 +254,8 @@ CONFIG_FIRMWARE_INCLUDE_NANO=y
 
 CONFIG_FIRMWARE_INCLUDE_IPERF=y
 
+CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+
 CONFIG_FIRMWARE_INCLUDE_DUMP1090=n
 
 CONFIG_FIRMWARE_INCLUDE_RTL_SDR=n
