--- a/trunk/configs/templates/MZ-R13P.config
+++ b/trunk/configs/templates/MZ-R13P.config
@@ -240,6 +240,8 @@ CONFIG_FIRMWARE_INCLUDE_NANO=y
 
 CONFIG_FIRMWARE_INCLUDE_IPERF=y
 
+CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+
 CONFIG_FIRMWARE_INCLUDE_DUMP1090=n
 
 CONFIG_FIRMWARE_INCLUDE_RTL_SDR=n
