--- a/trunk/configs/templates/OYE-001.config
+++ b/trunk/configs/templates/OYE-001.config
@@ -250,6 +250,8 @@ CONFIG_FIRMWARE_INCLUDE_NANO=y
 
 CONFIG_FIRMWARE_INCLUDE_IPERF=y
 
+CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+
 CONFIG_FIRMWARE_INCLUDE_DUMP1090=y
 
 CONFIG_FIRMWARE_INCLUDE_RTL_SDR=y
