K2P: bump to stable firmware napt66: disable ip6tables by rc instaed of script fix oui search issue

--- a/trunk/libs/libusb-1.0/Makefile
+++ b/trunk/libs/libusb-1.0/Makefile
@@ -29,6 +29,8 @@ configure:
 		--disable-static \
 		--disable-log \
 		--disable-udev \
+		--disable-examples-build \
+		--disable-tests-build \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
