PSG1218: mt7620 wifi driver revert to v2.7

--- a/trunk/configs/boards/OYE-001/kernel-3.4.x.config
+++ b/trunk/configs/boards/OYE-001/kernel-3.4.x.config
@@ -1842,11 +1842,12 @@ CONFIG_RT_SECOND_CARD=0
 # AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless driver
 #
 CONFIG_RT2860V2_AP=m
-CONFIG_RT2860V2_AP_LED=y
+# CONFIG_RT2860V2_AP_LED is not set
+# CONFIG_RT2860V2_AP_LED_SOFT is not set
 CONFIG_RT2860V2_AP_LLTD=y
 CONFIG_RT2860V2_AP_WDS=y
 CONFIG_RT2860V2_AP_MBSS=y
-# CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE is not set
+CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE=y
 CONFIG_RT2860V2_AP_APCLI=y
 # CONFIG_RT2860V2_AP_MAC_REPEATER is not set
 # CONFIG_RT2860V2_AP_CARRIER is not set
