--- a/trunk/configs/boards/5K-W20/kernel-3.4.x.config
+++ b/trunk/configs/boards/5K-W20/kernel-3.4.x.config
@@ -1823,7 +1823,7 @@ CONFIG_RT2860V2_AP_LED=y
 CONFIG_RT2860V2_AP_LLTD=y
 CONFIG_RT2860V2_AP_WDS=y
 CONFIG_RT2860V2_AP_MBSS=y
-# CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE is not set
+CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE=y
 CONFIG_RT2860V2_AP_APCLI=y
 # CONFIG_RT2860V2_AP_MAC_REPEATER is not set
 # CONFIG_RT2860V2_AP_CARRIER is not set
