--- a/trunk/configs/boards/PSG1218/kernel-3.4.x.config
+++ b/trunk/configs/boards/PSG1218/kernel-3.4.x.config
@@ -1459,12 +1459,13 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # 1st Wireless Interface
 #
 # CONFIG_RT_FIRST_IF_NONE is not set
-# CONFIG_RT_FIRST_IF_RT2860 is not set
-CONFIG_RT_FIRST_IF_MT7620=y
+CONFIG_RT_FIRST_IF_RT2860=y
+# CONFIG_RT_FIRST_IF_MT7620 is not set
 CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
+# CONFIG_RT_FIRST_IF_RANGE_5GHZ is not set
 CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
 CONFIG_RT_FIRST_IF_RF_OFFSET=0x40000
-CONFIG_RT_FIRST_CARD=7620
+CONFIG_RT_FIRST_CARD=2860
 CONFIG_RT_FIRST_CARD_EEPROM="flash"
 
 #
@@ -1495,10 +1496,33 @@ CONFIG_RT_SECOND_CARD_EEPROM="flash"
 #
 
 #
+# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless driver
+#
+CONFIG_RT2860V2_AP=m
+# CONFIG_RT2860V2_AP_LED is not set
+# CONFIG_RT2860V2_AP_LED_SOFT is not set
+CONFIG_RT2860V2_AP_LLTD=y
+CONFIG_RT2860V2_AP_WDS=y
+CONFIG_RT2860V2_AP_MBSS=y
+CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE=y
+CONFIG_RT2860V2_AP_APCLI=y
+# CONFIG_RT2860V2_AP_MAC_REPEATER is not set
+# CONFIG_RT2860V2_AP_CARRIER is not set
+# CONFIG_RT2860V2_AP_DLS is not set
+# CONFIG_RT2860V2_AP_IDS is not set
+CONFIG_RT2860V2_AP_GREENAP=y
+# CONFIG_INTERNAL_PA_INTERNAL_LNA is not set
+# CONFIG_INTERNAL_PA_EXTERNAL_LNA is not set
+CONFIG_EXTERNAL_PA_EXTERNAL_LNA=y
+# CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
+# CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION is not set
+
+#
 # AP MODE MediaTek MT7620/MT7602E/MT7612E RBUS/PCIe Wireless driver
 #
 CONFIG_MT76X2_AP=m
-CONFIG_MT76X2_AP_LED=y
+# CONFIG_MT76X2_AP_LED is not set
+# CONFIG_MT76X2_AP_LED_SOFT is not set
 CONFIG_MT76X2_AP_LLTD=y
 CONFIG_MT76X2_AP_WDS=y
 CONFIG_MT76X2_AP_MBSS=y
@@ -1512,16 +1536,10 @@ CONFIG_MT76X2_AP_APCLI=y
 # CONFIG_MT76X2_AP_AIRPLAY is not set
 # CONFIG_MT76X2_AP_DFS is not set
 # CONFIG_MT76X2_AP_CARRIER is not set
-# CONFIG_MT76X2_AP_GREENAP is not set
 # CONFIG_MT76X2_AP_IDS is not set
 # CONFIG_MT76X2_AP_DLS is not set
 CONFIG_MT76X2_AP_80211AC_VHT=y
 # CONFIG_MT76X2_AP_TXBF_SUPPORT is not set
-# CONFIG_MT76X2_AP_INTERNAL_PA_INTERNAL_LNA is not set
-# CONFIG_MT76X2_AP_INTERNAL_PA_EXTERNAL_LNA is not set
-CONFIG_MT76X2_AP_EXTERNAL_PA_EXTERNAL_LNA=y
-# CONFIG_MT76X2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
-# CONFIG_MT76X2_AP_ADJ_PWR_CONSUMPTION is not set
 
 #
 # Wireless drivers common configs
