add newifi3(d2) fix /etc mount size update default nvram var

--- a/trunk/libs/libsqlite/Makefile
+++ b/trunk/libs/libsqlite/Makefile
@@ -29,8 +29,11 @@ configure:
 		$(if $(LIBS_BUILD_SHARED),--enable-shared,--disable-shared) \
 		--disable-readline \
 		--disable-dynamic-extensions \
+		--disable-fts3 \
+		--disable-fts4 \
 		--disable-fts5 \
 		--disable-json1 \
+		--disable-rtree \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
