--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -28,6 +28,7 @@ SAMBA_ENABLED=n
 CHNROUTE_ENABLED=n
 ARIA2_ENABLED=n
 SOFTETHERVPN_ENABLE=n
+SHADOWSOCKS_ENABLE=n
 
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DROPBEAR),y)
@@ -105,6 +106,14 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT),y)
 SOFTETHERVPN_ENABLE=y
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SSSERVER),y)
+SHADOWSOCKS_ENABLE=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
+SHADOWSOCKS_ENABLE=y
+endif
+
 dir_y =
 dir_n =
 dir_  =
@@ -165,7 +174,7 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT)         += scutclient
 dir_$(CONFIG_FIRMWARE_INCLUDE_VLMCSD)			+= vlmcsd
 dir_$(CONFIG_FIRMWARE_INCLUDE_CHINADNS)		+= chinadns
 dir_$(CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER)		+= dns-forwarder
-dir_$(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS)		+= shadowsocks
+dir_$(SHADOWSOCKS_ENABLE)				+= shadowsocks
 dir_$(CONFIG_FIRMWARE_INCLUDE_LRZSZ)			+= lrzsz
 dir_$(CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM)		+= gdut-drcom
 dir_$(CONFIG_FIRMWARE_INCLUDE_DNSMASQ_CHINA_CONF)	+= dnsmasq-china-conf
