--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -41,6 +41,7 @@ LIBS_INCLUDE_LIBXML2=n
 LIBS_INCLUDE_MBEDTLS=n
 LIBS_INCLUDE_READLINE=n
 LIBS_INCLUDE_LIBRTLSDR=n
+LIBS_INCLUDE_C_ARES=n
 STORAGE_ENABLED=n
 
 ifdef CONFIG_MMC_BLOCK
@@ -81,11 +82,15 @@ LIBS_INCLUDE_LIBPCRE=y
 LIBS_INCLUDE_LIBEV=y
 LIBS_INCLUDE_LIBSODIUM=y
 LIBS_INCLUDE_LIBUDNS=y
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS_MBEDTLS),y)
 LIBS_INCLUDE_MBEDTLS=y
-else
-LIBS_INCLUDE_LIBSSL=y
+LIBS_INCLUDE_C_ARES=y
 endif
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SSSERVER),y)
+LIBS_INCLUDE_LIBPCRE=y
+LIBS_INCLUDE_LIBEV=y
+LIBS_INCLUDE_LIBSODIUM=y
+LIBS_INCLUDE_MBEDTLS=y
+LIBS_INCLUDE_C_ARES=y
 endif
 ifeq ($(STORAGE_ENABLED),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),y)
@@ -229,7 +234,7 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= libevent
 dir_$(LIBS_INCLUDE_LIBXML2)		+= libxml2
 
 dir_$(LIBS_INCLUDE_MBEDTLS)		+= mbedtls
-
+dir_$(LIBS_INCLUDE_C_ARES)		+= c-ares
 dir_$(LIBS_INCLUDE_READLINE)		+= readline
 
 all:
