drop dnsmasq-china-list, add gfwlist for dnsmasq resolve policy prepare for support gfwlist in ss

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -84,6 +84,7 @@ LIBS_INCLUDE_LIBSODIUM=y
 LIBS_INCLUDE_LIBUDNS=y
 LIBS_INCLUDE_MBEDTLS=y
 LIBS_INCLUDE_C_ARES=y
+LIBS_INCLUDE_CURL=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SSSERVER),y)
 LIBS_INCLUDE_LIBPCRE=y
