--- a/trunk/user/vlmcsd/Makefile
+++ b/trunk/user/vlmcsd/Makefile
@@ -1,9 +1,9 @@
 THISDIR = $(shell pwd)
-SRC_NAME = vlmcsd-master
-SRC_URL = https://github.com/hanwckf/vlmcsd/archive/master.zip
+SRC_NAME = vlmcsd-1112-pdv
+SRC_URL = https://github.com/hanwckf/vlmcsd/archive/v1112-pdv.zip
 
 all: download_test extract_test
-	$(MAKE) -C $(SRC_NAME) CC=$(CONFIG_CROSS_COMPILER_ROOT)/bin/mipsel-linux-uclibc-gcc
+	$(MAKE) -C $(SRC_NAME) vlmcsd CC=$(CONFIG_CROSS_COMPILER_ROOT)/bin/mipsel-linux-uclibc-gcc
 	
 download_test: 
 	( if [ ! -f $(THISDIR)/$(SRC_NAME).zip ]; then \
