--- a/trunk/user/scutclient/Makefile
+++ b/trunk/user/scutclient/Makefile
@@ -1,10 +1,10 @@
-SRC_NAME = scutclient-upstream
-ARCHIVE_NAME = scutclient-upstream-ca26d9d
+SRC_NAME = scutclient-2b45c376d573da39623285150a5dc7e38582c3e0
+ARCHIVE_NAME = scutclient-2b45c376d573da39623285150a5dc7e38582c3e0
 #https://github.com/hanwckf/scutclient.git
 THISDIR = $(shell pwd)
 
 all: extract_test config_test
-	$(MAKE) -C $(SRC_NAME)/build
+	$(MAKE) -C $(SRC_NAME)
 
 extract_test:
 	( if [ ! -d $(THISDIR)/$(SRC_NAME) ]; then \
@@ -19,15 +19,21 @@ config_test:
 	fi )
 
 configure:
-	( mkdir -p $(SRC_NAME)/build && cd $(SRC_NAME)/build ; \
-	cmake -DCMAKE_TOOLCHAIN_FILE=../../cross-mipsel-linux.cmake .. \
+	( cd $(SRC_NAME) ; \
+	autoreconf -fi ; \
+	./configure \
+		--prefix=/usr \
+		--host=$(HOST_TARGET) \
+		--build=$(HOST_BUILD) ; \
 	)
 
 clean:
-	rm -rf $(SRC_NAME)/build
+	if [ -f $(SRC_NAME)/Makefile ] ; then \
+		$(MAKE) -C $(SRC_NAME) distclean ; \
+	fi ; \
 	rm -f config_done
 
 romfs:
 	chmod -R +x ./scripts
 	${ROMFSINST} $(THISDIR)/scripts/ /usr/bin/
-	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/build/scutclient /usr/bin/bin_scutclient
+	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/scutclient /usr/bin/bin_scutclient
