using generic gfwlist instead of ipset version, please reset /etc/storage

--- a/trunk/user/shadowsocks/Makefile
+++ b/trunk/user/shadowsocks/Makefile
@@ -7,7 +7,8 @@ SRC_SSR_NAME=shadowsocksr-libev-master
 ARCHIVE_SSR_NAME=shadowsocksr-libev-master-e2373d7
 #https://github.com/shadowsocksr-backup/shadowsocksr-libev.git
 
-GFWLIST_URL=https://cokebar.github.io/gfwlist2dnsmasq/dnsmasq_gfwlist_ipset.conf
+GFWLIST_NAME=dnsmasq_gfwlist.conf
+GFWLIST_URL=https://cokebar.github.io/gfwlist2dnsmasq/$(GFWLIST_NAME)
 GFWLIST_DIR=gfwlist
 
 all: gfwlist extract_test config_test
@@ -22,7 +23,7 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
 	( if [ ! -f $(GFWLIST_DIR)/.finish ]; then \
 		cd $(GFWLIST_DIR) && rm -f * && \
 		wget -q -t5 --timeout=20 --no-check-certificate $(GFWLIST_URL) && \
-		tar jcf gfwlist.bz2 dnsmasq_gfwlist_ipset.conf && \
+		tar jcf gfwlist.bz2 $(GFWLIST_NAME) && \
 		touch .finish ; \
 	fi )
 endif
