improve chnroute download method

--- a/trunk/user/chnroute/Makefile
+++ b/trunk/user/chnroute/Makefile
@@ -2,11 +2,11 @@ url = http://ftp.apnic.net/apnic/stats/apnic/delegated-apnic-latest
 THISDIR = $(shell pwd)
 
 all :
-	( if [ ! -f chnroute.txt ];then \
-		wget -t3 -4 --timeout=5 -O- '$(url)' | awk -F\| '/CN\|ipv4/ { printf("%s/%d\n", $$4, 32-log($$5)/log(2)) }' > ./chnroute.txt.tmp ;\
-		mv -f chnroute.txt.tmp chnroute.txt ;\
+	( if [ ! -f chnroute.bz2 ];then \
+		wget -t3 -4 --timeout=5 -O chnroute.txt.tmp '$(url)' && \
+		awk -F\| '/CN\|ipv4/ { printf("%s/%d\n", $$4, 32-log($$5)/log(2)) }' < chnroute.txt.tmp > chnroute.txt && \
+		rm -f chnroute.txt.tmp && tar jcf chnroute.bz2 chnroute.txt ;\
 	fi )
-	tar jcf chnroute.bz2 chnroute.txt
 
 romfs:
 	chmod -R +x ./scripts
