--- a/trunk/configs/boards/OYE-001/kernel-3.4.x.config
+++ b/trunk/configs/boards/OYE-001/kernel-3.4.x.config
@@ -1835,6 +1835,13 @@ CONFIG_RT_SECOND_IF_NONE=y
 CONFIG_RT_SECOND_CARD=0
 
 #
+# 3rd Wireless Interface
+#
+CONFIG_RT_THIRD_IF_NONE=y
+# CONFIG_RT_THIRD_IF_MT7615E is not set
+CONFIG_RT_THIRD_CARD=0
+
+#
 # Wireless drivers settings
 #
 
