--- a/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
+++ b/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
@@ -1932,6 +1932,13 @@ CONFIG_RT_SECOND_CARD=7612
 CONFIG_RT_SECOND_CARD_EEPROM="flash"
 
 #
+# 3rd Wireless Interface
+#
+CONFIG_RT_THIRD_IF_NONE=y
+# CONFIG_RT_THIRD_IF_MT7615E is not set
+CONFIG_RT_THIRD_CARD=0
+
+#
 # Wireless drivers settings
 #
 
