K2P: merge kernel-config

--- a/trunk/configs/boards/K2P/kernel-3.4.x.config
+++ b/trunk/configs/boards/K2P/kernel-3.4.x.config
@@ -1532,8 +1532,6 @@ CONFIG_RT_FIRST_IF_MT7615E=y
 CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
 # CONFIG_RT_FIRST_IF_RANGE_5GHZ is not set
 CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
-# CONFIG_RT_FIRST_IF_EEPROM_EFUSE is not set
-# CONFIG_RT_FIRST_IF_EEPROM_PROM is not set
 CONFIG_RT_FIRST_IF_RF_OFFSET=0x40000
 CONFIG_RT_FIRST_CARD=7615
 CONFIG_RT_FIRST_CARD_EEPROM="flash"
@@ -1573,27 +1571,89 @@ CONFIG_RT_THIRD_CARD=0
 #
 
 #
-# Wireless drivers common configs
+# AP MODE MediaTek MT7615E PCIe Wireless driver
 #
-# CONFIG_RT_SINGLE_SKU is not set
-CONFIG_RT_MAX_CLIENTS=48
-# CONFIG_RT_BAND_STEERING is not set
-# CONFIG_RT_DOT11R_FT is not set
-# CONFIG_RT_DOT11K_RRM is not set
-# CONFIG_RT_80211N_DRAFT3 is not set
-# CONFIG_RT_80211W_PMF is not set
-CONFIG_RT_WSC=y
-# CONFIG_RT_WSC_V2 is not set
-# CONFIG_RT_WSC_NFC is not set
-# CONFIG_RT_ED_MONITOR is not set
-CONFIG_RT_IGMP_SNOOP=y
-# CONFIG_RT_MCAST_RATE_SPECIFIC is not set
-# CONFIG_RT_DELAYED_TCP_ACK is not set
-# CONFIG_RT_NETIF_BLOCK is not set
-# CONFIG_RT_SNMP is not set
-CONFIG_RT_READ_MAC_FROM_MTD=y
-# CONFIG_RT_MEMORY_OPTIMIZATION is not set
-# CONFIG_RT_DEBUG is not set
+CONFIG_WIFI_DRIVER=y
+CONFIG_CHIP_MT7615E=y
+CONFIG_MT_WIFI=m
+
+#
+# WiFi Generic Feature Options
+#
+CONFIG_MULTI_INF_SUPPORT=y
+CONFIG_WIFI_BASIC_FUNC=y
+CONFIG_DOT11_N_SUPPORT=y
+CONFIG_DOT11_VHT_AC=y
+CONFIG_G_BAND_256QAM_SUPPORT=y
+# CONFIG_TPC_SUPPORT is not set
+CONFIG_ICAP_SUPPORT=y
+CONFIG_BACKGROUND_SCAN_SUPPORT=y
+CONFIG_SMART_CARRIER_SENSE_SUPPORT=y
+# CONFIG_MT_DFS_SUPPORT is not set
+CONFIG_HDR_TRANS_TX_SUPPORT=y
+CONFIG_HDR_TRANS_RX_SUPPORT=y
+CONFIG_DBDC_MODE=y
+CONFIG_MULTI_PROFILE_SUPPORT=y
+CONFIG_DEFAULT_5G_PROFILE=y
+# CONFIG_WSC_INCLUDED is not set
+# CONFIG_WSC_V2_SUPPORT is not set
+CONFIG_DOT11W_PMF_SUPPORT=y
+CONFIG_TXBF_SUPPORT=y
+CONFIG_IGMP_SNOOP_SUPPORT=y
+CONFIG_RTMP_FLASH_SUPPORT=y
+CONFIG_RLM_CAL_CACHE_SUPPORT=y
+CONFIG_PRE_CAL_TRX_SET2_SUPPORT=y
+# CONFIG_RF_LOCKDOWN_SUPPORT is not set
+CONFIG_ATE_SUPPORT=y
+# CONFIG_PASSPOINT_R2 is not set
+CONFIG_UAPSD=y
+# CONFIG_RED_SUPPORT is not set
+# CONFIG_FDB_SUPPORT is not set
+CONFIG_FIRST_IF_EPAELNA=y
+# CONFIG_FIRST_IF_IPAILNA is not set
+# CONFIG_FIRST_IF_IPAELNA is not set
+CONFIG_SECOND_IF_EPAELNA=y
+# CONFIG_SECOND_IF_IPAILNA is not set
+# CONFIG_SECOND_IF_IPAELNA is not set
+# CONFIG_RLT_MAC is not set
+# CONFIG_RTMP_MAC is not set
+
+#
+# WiFi Operation Modes
+#
+# CONFIG_WIFI_MODE_AP is not set
+# CONFIG_WIFI_MODE_STA is not set
+CONFIG_WIFI_MODE_BOTH=m
+CONFIG_MT7615_AP=m
+CONFIG_MT_AP_SUPPORT=m
+CONFIG_WDS_SUPPORT=y
+CONFIG_MBSS_SUPPORT=y
+CONFIG_APCLI_SUPPORT=y
+# CONFIG_APCLI_CERT_SUPPORT is not set
+CONFIG_MAC_REPEATER_SUPPORT=y
+# CONFIG_MWDS is not set
+CONFIG_MUMIMO_SUPPORT=y
+CONFIG_MU_RA_SUPPORT=y
+# CONFIG_DOT11R_FT_SUPPORT is not set
+# CONFIG_DOT11K_RRM_SUPPORT is not set
+# CONFIG_CFG80211_SUPPORT is not set
+# CONFIG_DSCP_QOS_MAP_SUPPORT is not set
+CONFIG_MCAST_RATE_SPECIFIC=y
+CONFIG_VOW_SUPPORT=y
+CONFIG_BAND_STEERING=y
+# CONFIG_RADIO_LINK_SELECTION is not set
+# CONFIG_LED_CONTROL_SUPPORT is not set
+# CONFIG_GPIO_CONTROL_SUPPORT is not set
+# CONFIG_RADIUS_ACCOUNTING_SUPPORT is not set
+# CONFIG_GREENAP_SUPPORT is not set
+# CONFIG_ROAMING_ENHANCE_SUPPORT is not set
+# CONFIG_EASY_SETUP_SUPPORT is not set
+# CONFIG_EVENT_NOTIFIER_SUPPORT is not set
+# CONFIG_AIR_MONITOR is not set
+# CONFIG_WNM_SUPPORT is not set
+# CONFIG_STA_FORCE_ROAM_SUPPORT is not set
+CONFIG_LINUX_NET_TXQ_SUPPORT=y
+CONFIG_MT_MAC=y
 
 #
 # Ralink NAT Acceleration Mode
