--- a/trunk/configs/templates/K2P_DRV.config
+++ b/trunk/configs/templates/K2P_DRV.config
@@ -3,7 +3,7 @@ CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=MT7621
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="K2P_DRV"
+CONFIG_FIRMWARE_PRODUCT_ID="K2P"
 
 ### Linux kernel and toolchain
 
