--- a/trunk/configs/boards/K2P/kernel-3.4.x.config
+++ b/trunk/configs/boards/K2P/kernel-3.4.x.config
@@ -1585,7 +1585,7 @@ CONFIG_WIFI_BASIC_FUNC=y
 CONFIG_DOT11_N_SUPPORT=y
 CONFIG_DOT11_VHT_AC=y
 CONFIG_G_BAND_256QAM_SUPPORT=y
-# CONFIG_TPC_SUPPORT is not set
+CONFIG_TPC_SUPPORT=y
 CONFIG_ICAP_SUPPORT=y
 CONFIG_BACKGROUND_SCAN_SUPPORT=y
 CONFIG_SMART_CARRIER_SENSE_SUPPORT=y
@@ -1607,7 +1607,7 @@ CONFIG_PRE_CAL_TRX_SET2_SUPPORT=y
 CONFIG_ATE_SUPPORT=y
 # CONFIG_PASSPOINT_R2 is not set
 CONFIG_UAPSD=y
-# CONFIG_RED_SUPPORT is not set
+CONFIG_RED_SUPPORT=y
 # CONFIG_FDB_SUPPORT is not set
 CONFIG_FIRST_IF_EPAELNA=y
 # CONFIG_FIRST_IF_IPAILNA is not set
