kernel: prepare for sfe

--- a/trunk/configs/boards/K2P/kernel-3.4.x.config
+++ b/trunk/configs/boards/K2P/kernel-3.4.x.config
@@ -407,6 +407,7 @@ CONFIG_TRAD_SIGNALS=y
 #
 # CONFIG_PM_RUNTIME is not set
 CONFIG_NET=y
+CONFIG_SHORTCUT_FE=y
 
 #
 # Networking options
@@ -491,7 +492,7 @@ CONFIG_NETFILTER_NETLINK=m
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_MARK=y
 CONFIG_NF_CONNTRACK_PROCFS=y
-# CONFIG_NF_CONNTRACK_EVENTS is not set
+CONFIG_NF_CONNTRACK_EVENTS=y
 # CONFIG_NF_CONNTRACK_TIMEOUT is not set
 # CONFIG_NF_CONNTRACK_TIMESTAMP is not set
 # CONFIG_NF_CT_PROTO_DCCP is not set
