--- a/trunk/configs/boards/MI-MINI/kernel-3.4.x.config
+++ b/trunk/configs/boards/MI-MINI/kernel-3.4.x.config
@@ -377,6 +377,7 @@ CONFIG_TRAD_SIGNALS=y
 # CONFIG_ARCH_SUSPEND_POSSIBLE is not set
 # CONFIG_PM_RUNTIME is not set
 CONFIG_NET=y
+# CONFIG_SHORTCUT_FE is not set
 
 #
 # Networking options
