--- a/trunk/configs/boards/NEWIFI3/kernel-3.4.x.config
+++ b/trunk/configs/boards/NEWIFI3/kernel-3.4.x.config
@@ -407,6 +407,7 @@ CONFIG_TRAD_SIGNALS=y
 #
 # CONFIG_PM_RUNTIME is not set
 CONFIG_NET=y
+# CONFIG_SHORTCUT_FE is not set
 
 #
 # Networking options
