--- a/trunk/configs/templates/K2P.config
+++ b/trunk/configs/templates/K2P.config
@@ -8,6 +8,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="K2P"
 ### Linux kernel and toolchain
 CONFIG_WITHOUT_KERNEL=y
 CONFIG_WITHOUT_IW=y
+CONFIG_FIRMWARE_INCLUDE_SFE=y
 
 CONFIG_LINUXDIR=linux-3.4.x
 CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
