--- a/trunk/configs/templates/K2P_DRV.config
+++ b/trunk/configs/templates/K2P_DRV.config
@@ -6,6 +6,7 @@ CONFIG_PRODUCT=MT7621
 CONFIG_FIRMWARE_PRODUCT_ID="K2P"
 
 ### Linux kernel and toolchain
+CONFIG_FIRMWARE_INCLUDE_SFE=y
 
 CONFIG_LINUXDIR=linux-3.4.x
 CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
