add K2P_nano fix makefile

--- a/trunk/configs/templates/K2P_nano.config
+++ b/trunk/configs/templates/K2P_nano.config
@@ -6,8 +6,6 @@ CONFIG_PRODUCT=MT7621
 CONFIG_FIRMWARE_PRODUCT_ID="K2P"
 
 ### Linux kernel and toolchain
-CONFIG_WITHOUT_KERNEL=y
-CONFIG_WITHOUT_IW=y
 CONFIG_FIRMWARE_INCLUDE_SFE=y
 
 CONFIG_LINUXDIR=linux-3.4.x
@@ -29,12 +27,10 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 #CONFIG_FIRMWARE_CPU_SLEEP=y
 
 ### Kernel driver select for WiFi AP 2.4GHz
-### 4.1 = MT7603E v4.1.0.0
-#CONFIG_FIRMWARE_WIFI2_DRIVER=4.1
+CONFIG_FIRMWARE_WIFI2_DRIVER=4.4.2.1
 
 ### Kernel driver select for WiFi AP 5GHz
-### 3.0 = MT7612E v3.0.4.0
-#CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
+CONFIG_FIRMWARE_WIFI5_DRIVER=4.4.2.1
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
@@ -262,7 +258,7 @@ CONFIG_FIRMWARE_INCLUDE_NANO=y
 
 CONFIG_FIRMWARE_INCLUDE_IPERF=n
 
-CONFIG_FIRMWARE_INCLUDE_IPERF3=n
+CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 
 CONFIG_FIRMWARE_INCLUDE_DUMP1090=n
 
