--- a/trunk/tools/travis/pdv-7621-ci.yml
+++ b/trunk/tools/travis/pdv-7621-ci.yml
@@ -25,6 +25,7 @@ script:
     - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup NEWIFI3 && sudo cp -f images/*.trx /opt/images
     - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup K2P && sudo cp -f images/*.trx /opt/images
     - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup K2P_DRV && sudo cp -f images/*.trx /opt/images/K2P_DRV_3.4.3.9-099.trx
+    - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup K2P_nano && sudo cp -f images/*.trx /opt/images/K2P_nano_3.4.3.9-099.trx
 
 after_script:
     - GIT_VERSION=`git rev-parse --short=7 HEAD 2>/dev/null` && [ -n "$GIT_VERSION" ] && image_name=images_mt7621_$GIT_VERSION || image_name=images_mt7621
