--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ compiler:
 
 install:
     - sudo apt-get update -qq
-    - sudo apt-get install -qq zip autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils libncurses5-dev autopoint curl
+    - sudo apt-get install -qq xz-utils autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils libncurses5-dev autopoint curl
     - sudo cp -f ./trunk/tools/travis/* /opt && sudo bash ./trunk/tools/travis_ci_build_trig.sh
 
 before_script:
@@ -31,8 +31,8 @@ script:
 
 after_script:
     - GIT_VERSION=`git rev-parse --short=7 HEAD 2>/dev/null` && [ -n "$GIT_VERSION" ] && image_name=images_mt7620_$GIT_VERSION || image_name=images_mt7620
-    - cd /opt/images && sudo bash -c "md5sum * > md5sum.txt" && sudo zip -r ${image_name}.zip ./*
-    - curl --upload-file ./${image_name}.zip https://transfer.sh/${image_name}.zip
+    - cd /opt/images && sudo bash -c "md5sum * > md5sum.txt" && sudo tar cvJf ${image_name}.tar.xz ./*
+    - curl --upload-file ./${image_name}.tar.xz https://transfer.sh/${image_name}.tar.xz
 
 env:
     global:
