--- a/trunk/tools/travis/pdv-7621-ci.yml
+++ b/trunk/tools/travis/pdv-7621-ci.yml
@@ -11,7 +11,7 @@ compiler:
 
 install:
     - sudo apt-get update -qq
-    - sudo apt-get install -qq xz-utils autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils libncurses5-dev autopoint curl
+    - sudo apt-get install -qq p7zip-full autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils libncurses5-dev autopoint curl
 
 before_script:
     - cd /opt && sudo mkdir images && sudo git clone --depth=1 https://github.com/hanwckf/rt-n56u.git
@@ -29,8 +29,8 @@ script:
 
 after_script:
     - GIT_VERSION=`git rev-parse --short=7 HEAD 2>/dev/null` && [ -n "$GIT_VERSION" ] && image_name=images_mt7621_$GIT_VERSION || image_name=images_mt7621
-    - cd /opt/images && sudo bash -c "md5sum * > md5sum.txt" && sudo XZ_OPT=-9 tar cvJf ${image_name}.tar.xz ./*
-    - curl --upload-file ./${image_name}.tar.xz https://transfer.sh/${image_name}.tar.xz
+    - cd /opt/images && sudo bash -c "md5sum * > md5sum.txt" && sudo 7z a -mx=9 ${image_name}.7z ./*
+    - curl --upload-file ./${image_name}.7z https://transfer.sh/${image_name}.7z
 
 git:
     depth: 3
