--- a/trunk/configs/templates/K2P.config
+++ b/trunk/configs/templates/K2P.config
@@ -6,7 +6,7 @@ CONFIG_PRODUCT=MT7621
 CONFIG_FIRMWARE_PRODUCT_ID="K2P"
 
 ### Linux kernel and toolchain
-CONFIG_WITHOUT_KERNEL=y
+#CONFIG_WITHOUT_KERNEL=n
 CONFIG_WITHOUT_IW=y
 CONFIG_FIRMWARE_INCLUDE_SFE=y
 
