--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -120,6 +120,9 @@ dir_  =
 
 dir_y						+= busybox
 dir_y						+= iptables
+dir_y						+= mcast
+dir_y						+= tinyproxy
+
 ifneq ($(CONFIG_WITHOUT_KERNEL),y)
 dir_$(CONFIG_FIRMWARE_INCLUDE_IPSET)		+= ipset
 dir_y						+= accel-pptpd
