mt7615: del useless makefile

--- a/trunk/linux-3.4.x/drivers/net/wireless/ralink/mt7615_ap/Makefile
+++ b/trunk/linux-3.4.x/drivers/net/wireless/ralink/mt7615_ap/Makefile
@@ -1015,5 +1015,5 @@ EXTRA_CFLAGS += -DOUI_CHECK_SUPPORT -DHTC_DECRYPT_IOT
 
 MODULE_FLAGS=$(EXTRA_CFLAGS)
 export MODULE_FLAGS
-obj-m+=$(SRC_EMBEDDED_DIR)/tools/plug_in/
+#obj-m+=$(SRC_EMBEDDED_DIR)/tools/plug_in/
 
